--- a/history/templates/history/report.html
+++ b/history/templates/history/report.html
@@ -1,5 +1,5 @@
 {% extends 'submit/base.html' %}
-{% block title %}Dashboard{% endblock%}
+{% block title %}Report{% endblock%}
 {% block main %}
 
 <h1>Report {{ report.id }}</h1>
@@ -42,9 +42,4 @@
 {% endif %}
 
 
-{% endblock %}
-{% block footer %}
-    <div class="text-center text-muted p-3">
-    CS3240 Team A22
-  </div>
 {% endblock %}
