--- a/shared/templates/shared/404.html
+++ b/shared/templates/shared/404.html
@@ -1,5 +1,5 @@
 {% extends 'submit/base.html' %}
-{% block title %}Dashboard{% endblock%}
+{% block title %}404{% endblock%}
 {% block main %}
 <p>404</p>
 {% endblock %}
