--- a/shared/templates/shared/home.html
+++ b/shared/templates/shared/home.html
@@ -1,5 +1,5 @@
 {% extends 'submit/base.html' %}
-{% block title %}Start Submission{% endblock%}
+{% block title %}Home{% endblock%}
 {% block main %}
 <div class="container my-5">
   <header class="text-center mb-4">
@@ -49,6 +49,4 @@
   </div>
 </div>
 {% endblock %}
-{% block footer %}
-  <div class="text-center text-muted p-3">CS3240 Team A22</div>
-{% endblock %}
+
