--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -120,9 +120,7 @@
 
     <footer class="footer">
       <div class="container">
-        {% block footer %}
-        <!-- !!! NEED TO DETERMINE footer content -->
-        {% endblock %}
+          <div class="text-center text-muted p-3">CS3240 Team A22</div>
       </div>
     </footer>
 
