--- a/submit/templates/submit/incident_categories.html
+++ b/submit/templates/submit/incident_categories.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Honor Incident Categories</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
+{% extends 'submit/base.html' %}
+{% block title %}Honor Incident Categories{% endblock%}
+{% block main %}
+    {% load static %}
   <div class="container mt-5">
     <h1 class="text-center mb-4">Honor Incident Categories</h1>
     <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -38,5 +33,4 @@
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+{% endblock %}
