--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -23,7 +23,7 @@
         <div class="top-strip"></div>
       <!-- Fixed navbar -->
       <nav class="navbar navbar-expand-md navbar-dark fixed-top navbar-custom">
-        <a class="navbar-brand ps-4" href="">Hoos Reporting Honor</a>
+        <a class="navbar-brand ps-4" href="{% url 'shared:home' %}">Hoos Reporting Honor</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -43,7 +43,7 @@
               >
             </li>
               <li class="nav-item active">
-              <a class="nav-link" href="/submit/incident_categories">Incident Categories<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="{% url 'submit:incident_categories'%}">Incident Categories<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -58,17 +58,16 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li>
-                  <a class="dropdown-item" href="/submit">Make a Report</a>
+                  <a class="dropdown-item" href="{% url 'submit:start_submission' %}">Make a Report</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="/history/lookup"
-                    >Find Report</a
+                  <a class="dropdown-item" href="{% url 'history:lookup' %}">Find Report</a
                   >
                 </li>
                 <!-- case id lookup -->
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="/login_page">Dashboard (must login)</a>
+                  <a class="dropdown-item" href="{% url 'history:dashboard' %}">Dashboard (must login)</a>
                 </li>
                 <!--  if not logged in, will lead them directly to login page. if not, directs to appropriate dashboard? -->
               </ul>
@@ -80,20 +79,20 @@
                 {% if user.profile.is_authenticated %}
                     {% if user.profile.is_admin %}
                         <li class="nav-item">
-                            <a class="nav-link" href="/shared/admin_home">
+                            <a class="nav-link" href="{% url 'history:dashboard' %}">
                                 <i class="fas fa-sign-in-alt"></i> Account
                             </a>
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="/shared/common">
+                            <a class="nav-link" href="{% url 'history:dashboard' %}">
                                 <i class="fas fa-sign-in-alt"></i> Account
                             </a>
                         </li>
                     {% endif %}
                 {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="/login">Sign In</a>
+                        <a class="nav-link" href="{% url 'login:login_view' %}">Sign In</a>
                     </li>
                 {% endif %}
             </ul>
