edited history to be in main

--- a/history/templates/history/lookup.html
+++ b/history/templates/history/lookup.html
@@ -1,6 +1,6 @@
 {% extends 'submit/base.html' %}
 {% block title %}Lookup{% endblock%}
-{% block content %}
+{% block main %}
 <div class="d-flex justify-content-center align-items-center vh-100">
     <div class="text-center">
     <form method="post">
