--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -95,8 +95,16 @@
                         <a class="nav-link" href="{% url 'login:login_view' %}">Sign In</a>
                     </li>
                 {% endif %}
-            </ul>
-
+              </ul>
+           <!-- Sign out button -->
+          <ul class="navbar-nav mr-auto">
+            {% if user.is_authenticated %}
+              <form class="form-inline my-2 my-lg-0" action="{% url 'login:logout_view' %}" method="post">
+              {% csrf_token %}
+              <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Sign Out</button>
+              </form>
+            {% endif %}
+          </ul>
         </div>
       </nav>
     </header>
