--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -127,10 +127,14 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
-          <div class="text-center text-muted p-3">CS3240 Team A22</div>
-      </div>
-    </footer>
+    <div class="container">
+        <div class="text-center text-muted p-3">
+            CS3240 Team A22<br>
+            This system is a class project and is not monitored. Please do not submit real information.<br>
+            If you need to report an honor offense, please visit <a href="https://honor.virginia.edu/contact">UVA Honor Reporting Page</a>.
+        </div>
+    </div>
+</footer>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
