Fixing footer layout

--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -129,8 +129,8 @@
     <footer class="footer">
     <div class="container">
         <div class="text-center text-muted p-3">
-            CS3240 Team A22<br>
-            This system is a class project and is not monitored. Please do not submit real information.<br>
+            CS3240 Team A22
+            This system is a class project and is not monitored. Please do not submit real information.
             If you need to report an honor offense, please visit <a href="https://honor.virginia.edu/contact">UVA Honor Reporting Page</a>.
         </div>
     </div>
