--- a/history/templates/history/report_details.html
+++ b/history/templates/history/report_details.html
@@ -23,28 +23,29 @@
 <p>Admin Notes: {{ report.report_text }}</p>
 
 
-
-
-
 {% if user.profile.is_admin %}
+<div style="margin-top: 10px;">
+    <form action="", method="post">
+        {% csrf_token %}
+        <input
+        type="text"
+        id="notes"
+        name="notes"
+        class="form-control"
+        placeholder="Notes"
+        />
+        <button type="submit" class="btn btn-primary" m>Edit</button>
+    </form>
+</div>
 
-<form action="", method="post">
-    {% csrf_token %}
-    <input
-    type="text"
-    id="notes"
-    name="notes"
-    class="form-control"
-    placeholder="Notes"
-    />
-    <button type="submit" class="btn btn-primary">Edit</button>
-</form>
+<div style="margin-top: 10px; margin-bottom: 10px;">
+    <form action="", method="post">
+        {% csrf_token %}
+        <input type="hidden" name="status" value="resolved">
+        <button type="submit" class="btn btn-primary">Resolve</button>
+    </form>
+</div>
 
-<form action="", method="post">
-    {% csrf_token %}
-    <input type="hidden" name="status" value="resolved">
-    <button type="submit" class="btn btn-primary">Resolve</button>
-</form>
 
 {% endif %}
 
