updated views file to pass new report object to the submission_complete template

--- a/submit/templates/submit/submission_complete.html
+++ b/submit/templates/submit/submission_complete.html
@@ -2,5 +2,5 @@
 {% block title %}Submission Complete{% endblock %}
 {% block main %}
     <h1>You have successfully submitted a report!</h1>
-    <p>Case ID: {{ new_report.case_hash_password }}</p>
+    <p>Case ID: {{ new_report.case_hash }}</p>
 {% endblock %}
