--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -12,9 +12,24 @@
     {% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %}
 
     <!-- CSS for navbar + sticky footer (could be applied to the rest of the project) -->
-<!--    <link href="../../static/submit/sticky-footer-navbar.css" rel="stylesheet">-->
-<!--    <link href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" rel="stylesheet">-->
-<!--    <link href="https://fonts.googleapis.com/css2?family=Franklin+Gothic&display=swap" rel="stylesheet">-->
+    <link href="../../static/submit/sticky-footer-navbar.css" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Franklin+Gothic&display=swap" rel="stylesheet">
+      <style>
+        body {
+            margin-bottom: 60px; /* Adjust the margin to accommodate the footer */
+        }
+        .footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            background-color: #f5f5f5;
+            padding: 10px 0; /* Adjust padding as needed */
+        }
+        .footer-text {
+            font-size: 14px;
+        }
+    </style>
 
   </head>
 
