--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -141,7 +141,7 @@
       {% endblock %}
     </main>
 
-    <footer class="footer d-flex justify-content-center align-items-center">
+    <footer class="footer">
     <div class="container">
         <div class="text-center text-muted p-3">
             CS3240 Team A22
