--- a/login/templates/login/login_page.html
+++ b/login/templates/login/login_page.html
@@ -1,42 +1,51 @@
 {% extends 'submit/base.html' %}
-{% block title %}Login Page{% endblock%}
+{% block title %}Login Page{% endblock %}
+{% block banner %}
+    <div class="mb-3" style="background-color: #f66733; padding: 25px; width: 100%;">
+        <h1 style="color: white">Sign in to keep track of your reports!</h1>
+    </div>
+{% endblock %}
 {% block main %}
     {% load static %}
     <div class="d-flex justify-content-center align-items-center vh-100">
-      <div class="text-center">
-        <div class="mb-3">
-          <!-- <h1>Login with Google</h1> -->
+        <div class="text-center">
+            <div class="mb-3" style="background-color: #f66733; padding: 25px; width: 100%;">
+                <h1 style="color: white">Sign in to keep track of your reports!</h1>
+            </div>
+            <form action="{% url 'login:login_request' %}" method="POST">
+                {% csrf_token %}
+                <div class="mb-3">
+                    <input
+                            type="email"
+                            class="form-control"
+                            id="email"
+                            name="email"
+                            placeholder="email@email.com"
+                    />
+                </div>
+                <div class="mb-3">
+                    <input
+                            type="password"
+                            class="form-control"
+                            id="password"
+                            name="password"
+                            placeholder="Password"
+                    />
+                </div>
+                <button type="submit" class="btn btn-primary">Sign in</button>
+            </form>
+            {% load socialaccount %}
+            <div class="row">
+                <div class="col-sm-6 col-lg-3 mb-4">
+                    <a href="{% provider_login_url 'google' %}" class="btn btn-info" style="color: white;">Sign in with
+                        Google</a>
+                </div>
+                <div class="col-sm-6 col-lg-3 mb-4">
+                    <a href="{% url 'submit:start_submission' %}" class="btn btn-warning" style="color: white;">Submit
+                        An Anonymous Report</a>
+                </div>
+            </div>
         </div>
-        <form action="{% url 'login:login_request' %}" method="POST">
-          {% csrf_token %}
-          <div class="mb-3">
-            <input
-              type="email"
-              class="form-control"
-              id="email"
-              name="email"
-              placeholder="email@email.com"
-            />
-          </div>
-          <div class="mb-3">
-            <input
-              type="password"
-              class="form-control"
-              id="password"
-              name="password"
-              placeholder="Password"
-            />
-          </div>
-          <button type="submit" class="btn btn-primary">Sign in</button>
-        </form>
-        {% load socialaccount %}
-        <div class="mt-3">
-          <a href="{% provider_login_url 'google' %}" class="btn btn-secondary">Sign in with Google</a>
-      </div>
-      <div class="mt-3">
-        <a href="{% url 'submit:start_submission' %}" class="btn btn-secondary">Submit An Anonymous Report</a>
-      </div>
-    </div>
     </div>
 {% endblock %}
 
