--- a/submit/templates/submit/start_submission.html
+++ b/submit/templates/submit/start_submission.html
@@ -1,11 +1,21 @@
 {% extends 'submit/base.html' %}
 {% block title %}Start Submission{% endblock %}
+{% block header %}
+    <link href="../../static/submit/submission-features.css" rel="stylesheet">
+{% endblock %}
+{% block banner %}
+    <div class="text-center submit-jumbotron">
+        <h1>Start Submission</h1>
+    </div>
+{% endblock %}
 {% block main %}
-    <h1>Start Submission</h1>
-
     <div class="honor-code-blurb">
-        <p>Welcome to the UVA Honor Code reporting system. The Honor Code at the University of Virginia is a unique and long-standing tradition of trust, integrity, and respect. By submitting a report, you're helping to maintain the high ethical standards that define our community. Please ensure your report is accurate and truthful, reflecting our shared commitment to honor and integrity.</p>
-        <p>Please go over the UVA Honor Code policy here: <a href="https://honor.virginia.edu/">UVA Honor Committee</a></p>
+        <p>Welcome to the UVA Honor Code reporting system. The Honor Code at the University of Virginia is a unique and
+            long-standing tradition of trust, integrity, and respect. By submitting a report, you're helping to maintain
+            the high ethical standards that define our community. Please ensure your report is accurate and truthful,
+            reflecting our shared commitment to honor and integrity.</p>
+        <p>Please go over the UVA Honor Code policy here: <a href="https://honor.virginia.edu/">UVA Honor Committee</a>
+        </p>
         <p>If you have any questions about the process, please contact UVA Honor at honor@virginia.edu.</p>
     </div>
 
