--- a/submit/templates/submit/submission_complete.html
+++ b/submit/templates/submit/submission_complete.html
@@ -1,6 +1,16 @@
 {% extends 'submit/base.html' %}
 {% block title %}Submission Complete{% endblock %}
+{% block header %}
+    <link href="../../static/submit/submission-features.css" rel="stylesheet">
+{% endblock %}
+{% block banner %}
+    <div class="submit-jumbotron">
+        <h1 class="text-center mt-5">You have successfully submitted a report!</h1>
+    </div>
+{% endblock %}
 {% block main %}
-    <h1>You have successfully submitted a report!</h1>
+    <div class="container">
+        <p>Return to <a href={% url 'shared:home' %}>home.</a></p>
+    </div>
 
 {% endblock %}
