--- a/submit/static/submit/sticky-footer-navbar.css
+++ b/submit/static/submit/sticky-footer-navbar.css
@@ -9,6 +9,7 @@ body {
   font-family: 'Franklin Gothic', Arial, sans-serif;
   padding-bottom: 60px;
 }
+
 .footer {
   position: absolute;
   left: 0;
@@ -48,4 +49,17 @@ body > .container {
 
 code {
   font-size: 80%;
+}
+
+/** Check out? **/
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #f5f5f5;
+    padding: 10px 0; /* Adjust padding as needed */
+}
+
+.footer-text {
+    font-size: 14px;
 }
