Admin dashboard fix (#50)
* Edit path to incident categories in base html

* Created views function for generating a case ID after a report is submitted.

* Updated case ID to be case hash to prevent confusion with existing case ID variable

* updated login page to look prettier..

* incident categories navbar fix #1?

* resolved login page formatting issue

* formatting issues resolved?

* additional formatting on login page

* added image banner to home page to serve as header

* added uva logo to nav bar

* modified css to better fit home banner

* moved banner outside of container to span entire home page

* refactored css file to split up home css from navbar css and added icons for boxes on main page

* trying to scoot banner to the left :(

* trying to resolve footer not showing up :((

* moved login buttons to be next to each other and made login banner actually span the top

* applied navbar styling to submission pages and udpated submission complete page to offer reroute to home link

* modified submit banners bc blending into the top strip

* updated case id on submission page to be the password

* updated views file to pass new report object to the submission_complete template

* Added description of case id for user

* trying to fix footer, got rid of css stylesheet

* added custom css to override default styles

* made text appear in the center of the footer

* move footer text

* move footer text

* move footer text

* fixing incident category setup in models->databases

* fixing incident category setup in models->databases made unknown an option

* updated forms method to include incident_category

* revert models

* get rid of choices field

* fixed admin boolean on accounts

* added flex to css to hopefully fix footer ?

* please fix footer :(

* updated sign in page buttons to be equal size and centered in container

* removed double banners

* removed submit anonymously but

--- a/login/templates/login/login_page.html
+++ b/login/templates/login/login_page.html
@@ -1,17 +1,18 @@
 {% extends 'submit/base.html' %}
 {% block title %}Login Page{% endblock %}
+
 {% block banner %}
-    <div class="mb-3" style="background-color: #f66733; padding: 25px; width: 100%;">
+    <div class="text-center mb-0" style="background-color: #f66733; padding: 25px; width: 100%;">
         <h1 style="color: white">Sign in to keep track of your reports!</h1>
     </div>
 {% endblock %}
+
 {% block main %}
     {% load static %}
-    <div class="d-flex justify-content-center align-items-center vh-100">
+    <div class="d-flex justify-content-center align-items-center vh-80" style="padding-top:10px">
         <div class="text-center">
-            <div class="mb-3" style="background-color: #f66733; padding: 25px; width: 100%;">
-                <h1 style="color: white">Sign in to keep track of your reports!</h1>
-            </div>
+            <h4>If you want to submit a report anonymously, click <a
+                    href="{% url 'submit:start_submission' %}">here.</a></h4>
             <form action="{% url 'login:login_request' %}" method="POST">
                 {% csrf_token %}
                 <div class="mb-3">
@@ -35,16 +36,25 @@
                 <button type="submit" class="btn btn-primary">Sign in</button>
             </form>
             {% load socialaccount %}
-            <div class="row">
-                <div class="col-sm-6 col-lg-3 mb-4">
-                    <a href="{% provider_login_url 'google' %}" class="btn btn-info" style="color: white;">Sign in with
-                        Google</a>
+            <div class="row justify-content-center" style="padding-top: 20px">
+                <div class="col-sm-6 col-lg-3 mb-4 d-flex justify-content-center">
+                    {#                    <a href="{% provider_login_url 'google' %}" class="btn btn-info"#}
+                    {#                       style="color: white; min-width: 200px;">Sign in with Google</a>#}
+                    <div class="d-flex align-items-center">
+                        <!-- Icon with a right margin -->
+                        <a href="{% provider_login_url 'google' %}" class="btn btn-secondary"
+                           style="color: white; min-width: 200px;">
+                            <img src="../../static/login/images/google.svg" alt="google" width="20"
+                                 style="margin-right: 10px;">
+                            Sign in with Google</a>
+                    </div>
                 </div>
-                <div class="col-sm-6 col-lg-3 mb-4">
-                    <a href="{% url 'submit:start_submission' %}" class="btn btn-warning" style="color: white;">Submit
-                        An Anonymous Report</a>
-                </div>
+                {#                <div class="col-sm-6 col-lg-3 mb-4 d-flex justify-content-center">#}
+                {#                    <a href="{% url 'submit:start_submission' %}" class="btn btn-warning"#}
+                {#                       style="color: white; min-width: 200px;">Submit An Anonymous Report</a>#}
+                {#                </div>#}
             </div>
+
         </div>
     </div>
 {% endblock %}
