--- a/submit/static/submit/sticky-footer-navbar.css
+++ b/submit/static/submit/sticky-footer-navbar.css
@@ -1,37 +1,52 @@
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
 }
+
 body {
-  /* Margin bottom by footer height */
-  font-family: 'Franklin Gothic', Arial, sans-serif;
-  padding-bottom: 60px;
+    /* Margin bottom by footer height */
+    font-family: 'Franklin Gothic', Arial, sans-serif;
+    padding-bottom: 60px;
+    min-height: 100vh; /* Ensures at least full viewport height */
+    display: flex;
+    flex-direction: column;
+}
+
+.content {
+    flex: 1; /* Allows the content area to expand and push the footer down */
 }
 
 .footer {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
-  background-color: #151f52;
-  color: #ffffff;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #151f52;
+    color: #ffffff;
+    text-align: center;
+    font-size: 14px;
+    padding-top: 0;
 }
+    /*padding: 10px 0; !* Vertical padding *!*
 
+     */
 /* navbar styles
 -------------------------------------------------- */
 .navbar-custom {
     background-color: #151f52; /* Navy blue */
 }
+
 .top-strip {
-  height: 75px;
-  background-color: #f66733;
-  width: 100%;
-  margin-bottom: 0; /* removes gap between nav bar and image */
+    height: 75px;
+    background-color: #f66733;
+    width: 100%;
+    margin-bottom: 0; /* removes gap between nav bar and image */
 }
 
 a, a:visited {
@@ -39,27 +54,19 @@ a, a:visited {
 }
 
 body > .container {
-  padding: 60px 15px 0;
+    padding: 60px 15px 0;
 }
 
 .footer > .container {
-  padding-right: 15px;
-  padding-left: 15px;
+    padding-right: 15px;
+    padding-left: 15px;
 }
 
 code {
-  font-size: 80%;
-}
-
-/** Check out? **/
-.footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: #f5f5f5;
-    padding: 10px 0; /* Adjust padding as needed */
+    font-size: 80%;
 }
 
 .footer-text {
     font-size: 14px;
 }
+
