--- a/history/templates/history/report_details.html
+++ b/history/templates/history/report_details.html
@@ -35,7 +35,7 @@
         placeholder="Notes"
         />
         <div style="margin-top: 10px;">
-            <button type="submit" class="btn btn-primary" m>Edit</button>
+            <button type="submit" class="btn btn-primary" m>Add Notes</button>
         </div>
     </form>
 </div>
