Case hashing backend (#53)
* Edit path to incident categories in base html

* Created views function for generating a case ID after a report is submitted.

* Updated case ID to be case hash to prevent confusion with existing case ID variable

* updated login page to look prettier..

* incident categories navbar fix #1?

* resolved login page formatting issue

* formatting issues resolved?

* additional formatting on login page

* added image banner to home page to serve as header

* added uva logo to nav bar

* modified css to better fit home banner

* moved banner outside of container to span entire home page

* refactored css file to split up home css from navbar css and added icons for boxes on main page

* trying to scoot banner to the left :(

* trying to resolve footer not showing up :((

* moved login buttons to be next to each other and made login banner actually span the top

* applied navbar styling to submission pages and udpated submission complete page to offer reroute to home link

* modified submit banners bc blending into the top strip

* updated case id on submission page to be the password

* updated views file to pass new report object to the submission_complete template

* Added description of case id for user

* trying to fix footer, got rid of css stylesheet

* added custom css to override default styles

* made text appear in the center of the footer

* move footer text

* move footer text

* move footer text

* fixing incident category setup in models->databases

* fixing incident category setup in models->databases made unknown an option

* updated forms method to include incident_category

* revert models

* get rid of choices field

* fixed admin boolean on accounts

* added flex to css to hopefully fix footer ?

* please fix footer :(

* updated sign in page buttons to be equal size and centered in container

* removed double banners

* removed submit anonymously bu

--- a/history/templates/history/dashboard.html
+++ b/history/templates/history/dashboard.html
@@ -1,11 +1,17 @@
 {% extends "submit/base.html" %} 
+{% load static %}
+
+{% block extra_css %}
+    <link rel="stylesheet" type="text/css" href="{% static 'history/dashboard.css' %}">
+{% endblock %}
+
 {% block main %}
 <h1>Completed Reports</h1>
 
 <table class="table table-hover table-responsive-md">
   <thead class="thead-dark">
     <tr>
-      <th scope="col">Report ID</th>
+      <th scope="col">Report Hash</th>
       <th scope="col">Submitted By</th>
       <th scope="col">Status</th>
       <th scope="col">Date</th>
@@ -16,7 +22,9 @@
   <tbody>
     {% for report in reports %}
     <tr>
-      <td>{{ report.id }}</td>
+      <td>
+        <span class="hash-cell" title="{{ report.report_hash }}">{{ report.report_hash }}</span>
+      </td>      
       <td>
         {% if report.user %} 
             {{report.user.username}} 
