--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -21,6 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Franklin+Gothic&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    {% block extra_css %}{% endblock %}
 </head>
 
 <body>
