--- a/history/templates/history/report_details.html
+++ b/history/templates/history/report_details.html
@@ -2,7 +2,7 @@
 {% block title %}Report{% endblock%}
 {% block main %}
 
-<h1>Report {{ report.id }}</h1>
+<h1>Report {{ report.report_hash }}</h1>
 <p>Status: {{ report.status }}</p>
 <p>User: {{ report.user.username }}</p>
 <p>Submission Date: {{ report.submission_date }}</p>
