--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -22,6 +22,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
 
     {% block extra_css %}{% endblock %}
+    {% block extra_js %}{% endblock %}
 </head>
 
 <body>
