--- a/submit/templates/submit/submission_complete.html
+++ b/submit/templates/submit/submission_complete.html
@@ -12,10 +12,28 @@
 {% endblock %}
 
 {% block main %}
-<h1>You have successfully submitted a report!</h1>
 <p>Case ID: {{ new_report.case_hash }}</p>
+<div class="case-id-container">
+    <p>Case ID: <span id="caseID">{{ new_report.case_hash }}</span></p>
+    <button onclick="copyCaseID()" class="copy-btn">Copy</button>
+</div>
 <p>Please save this Case ID if you want to check the status of your report later.</p>
 <div class="container">
     <p>Return to <a href="{% url 'shared:home' %}">home</a>.</p>
 </div>
+{% endblock %}
+
+{% block extra_js %}
+<script>
+    function copyCaseID() {
+        var copyText = document.getElementById("caseID");
+        var textArea = document.createElement("textarea");
+        textArea.value = copyText.textContent;
+        document.body.appendChild(textArea);
+        textArea.select();
+        document.execCommand("Copy");
+        textArea.remove();
+        alert("Copied the Case ID: " + copyText.textContent);
+    }
+</script>
 {% endblock %}
