--- a/submit/templates/submit/submission_complete.html
+++ b/submit/templates/submit/submission_complete.html
@@ -13,7 +13,7 @@
 
 {% block main %}
 <div class="case-id-container">
-    <p>Case ID: <span id="caseID">{{ new_report.case_hash }}</span></p>
+    <p>Case ID: <span id="caseID">{{ case_hash }}</span></p>
     <button onclick="copyCaseID()" class="copy-btn">Copy</button>
 </div>
 <p>Please save this Case ID if you want to check the status of your report later.</p>
