--- a/history/templates/history/dashboard.html
+++ b/history/templates/history/dashboard.html
@@ -35,11 +35,11 @@
       <td>{{ report.status }}</td>
         <td>{{ report.submission_date }}</td>
       <td>
-        <form action="{% url 'history:report' report.id %}" method="post">
+        <form method="POST" action="{% url 'history:report' report.id %}">
           {% csrf_token %}
           <input type="hidden" name="change_status_to_pending" value="true">
           <button type="submit" class="btn btn-primary btn-sm">View Report</button>
-      </form>
+        </form>
       </td>
       <td>
         <form action="{% url 'history:delete' report.id %}" method="post">
