--- a/history/templates/history/report_details.html
+++ b/history/templates/history/report_details.html
@@ -4,7 +4,13 @@
 
 <h1>Report {{ report.report_hash }}</h1>
 <p>Status: {{ report.status }}</p>
-<p>User: {{ report.user.username }}</p>
+<p>User:
+    {% if report.user %} 
+    {{report.user.username}} 
+{% else %}
+    Anonymous
+{% endif %}
+</p>
 <p>Submission Date: {{ report.submission_date }}</p>
 <p>Edit Date: {{ report.edit_date }}</p>
 <p>Incident Date: {{ report.incident_date }}</p>
@@ -40,7 +46,7 @@
     </form>
 </div>
 
-<div style="margin-top: 10px; margin-bottom: 10px;">
+<div style="margin-top: 10px;">
     <form action="", method="post">
         {% csrf_token %}
         <input type="hidden" name="status" value="resolved">
@@ -48,8 +54,13 @@
     </form>
 </div>
 
+<div style="margin-top: 10px; margin-bottom: 10px">
+    <form method="POST" action="{% url 'history:delete' %}">
+        {% csrf_token %}
+        <input type="hidden" name="report_id" value="{{ report.id }}">
+        <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this report?');">Delete</button>
+    </form>
+</div>
 
 {% endif %}
-
-
 {% endblock %}
