--- a/submit/templates/submit/submission_complete.html
+++ b/submit/templates/submit/submission_complete.html
@@ -3,6 +3,7 @@
 
 {% block header %}
     <link href="../../static/submit/submission-features.css" rel="stylesheet">
+    <link href="../../static/submit/case-hash-copy-button.css" rel="stylesheet">
 {% endblock %}
 
 {% block banner %}
@@ -12,11 +13,12 @@
 {% endblock %}
 
 {% block main %}
-<div class="case-id-container">
-    <p>Case ID: <span id="caseID">{{ case_hash }}</span></p>
-    <button onclick="copyCaseID()" class="copy-btn">Copy</button>
+<div class="case-id-container" style="display: flex; align-items: center;">
+    <p style="margin-bottom: 0;">Case ID: <span id="caseID">{{ case_hash }}</span></p>
+    <button onclick="copyCaseID()" class="copy-btn" style="margin-left: 10px;">Copy</button>
 </div>
 <p>Please save this Case ID if you want to check the status of your report later.</p>
+
 <div class="container">
     <p>Return to <a href="{% url 'shared:home' %}">home</a>.</p>
 </div>
@@ -32,7 +34,22 @@
         textArea.select();
         document.execCommand("Copy");
         textArea.remove();
-        alert("Copied the Case ID: " + copyText.textContent);
+
+        // Create a tooltip-like feedback
+        var feedback = document.createElement("div");
+        feedback.textContent = "Copied Hash to Clipboard!";
+        feedback.style.position = "fixed";
+        feedback.style.bottom = "20px";
+        feedback.style.right = "20px";
+        feedback.style.padding = "5px 10px";
+        feedback.style.backgroundColor = "rgba(0, 123, 255, 0.8)";
+        feedback.style.color = "white";
+        feedback.style.borderRadius = "5px";
+        document.body.appendChild(feedback);
+
+        setTimeout(function() {
+            document.body.removeChild(feedback);
+        }, 2000);  // feedback message disappear after 2 seconds
     }
 </script>
 {% endblock %}
