updated to have feedback upon updated report as admin

--- a/history/templates/history/report_details.html
+++ b/history/templates/history/report_details.html
@@ -31,7 +31,7 @@
 
 {% if user.profile.is_admin %}
 <div>
-    <form action="", method="post">
+    <form action="{% url history: %}", method="post">
         {% csrf_token %}
         <input type="hidden" name="report_id" value="{{ report.id }}">
         <input type="text" id="notes" name="notes"class="form-control" placeholder="Notes"/>
